--- a/_config.yml
+++ b/_config.yml
@@ -9,9 +9,7 @@
 title: SwipeSense IO
 email: jori.hardman@swipesense.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Tutorials and lessons learned while building the SwipeSense analytics application.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://www.swipesense.com" # the base hostname & protocol for your site
 github_username:  swipesense
