--- a/_config.yml
+++ b/_config.yml
@@ -1,18 +1,17 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
-
 # Site settings
 title: SwipeSense IO
 email: jori.hardman@swipesense.com
-description: > # this means to ignore newlines until "baseurl:"
+description: >
   Tutorials and lessons learned while building the SwipeSense analytics application.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://www.swipesense.com" # the base hostname & protocol for your site
+url: "https://www.swipesense.com"
 github_username:  swipesense
+
+# For more see: https://github.com/mojombo/jekyll/wiki/Permalinks
+permalink: /:year/:month/:day/:title
 
 # Build settings
 markdown: kramdown
+lsi: false
+safe: true
+exclude: ["Gemfile", "Gemfile.lock", "CNAME"]
