--- a/_config.yml
+++ b/_config.yml
@@ -14,4 +14,4 @@ permalink: /:year/:month/:day/:title
 markdown: kramdown
 lsi: false
 safe: true
-exclude: ["Gemfile", "Gemfile.lock", "CNAME"]
+exclude: ["Gemfile", "Gemfile.lock", "LICENSE", "Rakefile", "_rake", "CNAME"]
